[package]
name = "node-to-arc-centric-dbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.1"
genome-graph = "5.2.0"
anyhow = "1.0.71"