[package]
name = "node-to-arc-centric-dbg"
version = "1.0.0"
edition = "2021"
license = "BSD-2-Clause"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
description = "Convert node-centric de Bruijn graphs as output by BCALM2 into arc-centric de Bruijn graphs as edge lists"
repository = "https://github.com/sebschmi/node-to-arc-centric-dbg"
rust-version = "1.64.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.1"
genome-graph = "5.2.0"
anyhow = "1.0.71"